Added some new components & fixed some bugs
- Added a checkbox component
- Renamed the toggle component to "switch"
- Added a new toggle component
- Added a new style (purple) to the button component
- Fixed a bug where opening a new route would open it at the same scroll as the last route

--- a/langs/en-US.json
+++ b/langs/en-US.json
@@ -27,5 +27,9 @@
     "bedrocktools.screen.settings": "Settings",
 
     "bedrocktools.toast.settings.title": "Settings saved!",
-    "bedrocktools.toast.settings.body": "All the settings have been saved successfully"
+    "bedrocktools.toast.settings.body": "All the settings have been saved successfully",
+
+    "bedrocktools.debug.title": "Internal Tools",
+    "bedrocktools.debug.description": "For developers only, will not show up in retail",
+    "bedrocktools.debug.components": "Components"
 }
